force-app/main/default/objects/Shift__c/fields/EmployeeUser__c.field-meta.xml
<CustomField>
    <fullName>EmployeeUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User where the shift belongs to.
This can also be other custom look up relations.</description>
    <label>Employee (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>