force-app/main/default/objects/Shift__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>End of a shift</description>
    <label>End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>