force-app/main/default/objects/Shift__c/fields/IsCurrentShift__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentShift__c</fullName>
    <description>Is current shift</description>
    <formula>Start__c &lt;= NOW() &amp;&amp; End__c &gt;= NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Shift</label>
    <type>Checkbox</type>
</CustomField>