force-app/main/default/objects/Shift__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>Start of a shift period</description>
    <label>Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>