force-app/main/default/objects/Shift__c/listViews/AllCurrentShifts.listView-meta.xml
<ListView>
    <fullName>AllCurrentShifts</fullName>
    <columns>NAME</columns>
    <columns>EmployeeUser__c</columns>
    <columns>IsCurrentShift__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCurrentShift__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Current Shifts</label>
</ListView>